# tour.ubuntu.com

./: .bzrignore  .env  .gitignore  Gulpfile.js  Makefile.am  README  README.md  configure.ac  index.html  json-test.html  package.json  renovate.json  run
.github/: PULL_REQUEST_TEMPLATE.md
12.04/: autogen.sh
12.04/css/: systemoverlay.css
12.04/po-html/: ca.po  cs.po  eo.po  gu.po  id.po  it.po  km.po  my.po  pt.po  pt_BR.po  sl.po  zh_CN.po
12.04/zh-CN/: index.html
12.10/: Makefile.am
12.10/en/: index.html
12.10/js/: systemsettings.js
12.10/po/: POTFILES.in
12.10/po-html/: ar.po  en_AU.po  fa.po  fo.po  fr.po  it.po  ja.po  pt.po  pt_BR.po  ta.po  tr.po  ubuntu-online-tour.pot
12.10/zh-CN/: index.html
13.04/css/: base.css  folder.css  libre.css
13.04/en/: index.html
13.04/js/: scripts.js
13.04/po-html/: bg.po  bs.po  cs.po  el.po  en_AU.po  fr.po  gl.po  gu.po  it.po  lt.po  my.po  oc.po  pt.po  shn.po  si.po  sv.po  ta.po  te.po  tr.po  uk.po  uz.po  (+1 more)
css/: base.css  email.css  error.css  folder.css  libre.css  loader.css  movieplayer.css  shotwell.css  software-centre.css  style-346ae965b4.min.css  style-73ad14d89d.min.css  style-c7227b0d57.min.css  style-e12034a074.min.css  style.min.css  systemoverlay.css  tourguide.css  welcome.css
data/: Makefile.am  ubuntu-online-tour.desktop.in
debian/: changelog  control  copyright
en/: index.html
js/: analytics.js  email.js  emailsystem.js  en-lang.js  errormessage.js  file.js  filesystem.js  folders.js  guidedtoursystem.js  internetsystem.js  jquery-ui.min.js  lang-assets.js  lang.js  movieplayersystem.js  script-193ebb2859.min.js  scripts.js  shotwellsystem.js  shutdownSystem.js  softwaresystem.js  systemmenu.js  systemoverlay.js  systemsettings.js  welcomesystem.js  zh-json.js  zh-lang.js
po/: POTFILES.in  POTFILES.skip  ca.po  ubuntu-online-tour.pot  zh_CN.po
po-html/: POTFILES.in  ar.po  az.po  bg.po  bs.po  ca.po  cs.po  de.po  el.po  en_AU.po  en_GB.po  eo.po  es.po  fa.po  fi.po  fo.po  fr.po  gl.po  gu.po  he.po  hu.po  id.po  it.po  ja.po  km.po  ko.po  lt.po  lv.po  ml.po  ms.po  my.po  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  shn.po  (+13 more)
translate-html/: .quickly  setup.py
zh/: index.html
zh-CN/: index.html
(+55 files in other folders)
